-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 25, 26
-
Component/s: hotspot
-
b20
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8377767 | 25.0.3 | Aleksey Shipilev | P3 | Resolved | Fixed | b03 |
In production, this behaves safe, but in debug, we find a missing case.
Very easy to reproduce:
java Test.java
Very easy to reproduce:
java Test.java
- backported by
-
JDK-8377767 C2: Unexpected node in SuperWord truncation: ReverseBytesS, ReverseBytesUS
-
- Resolved
-
- caused by
-
JDK-8350177 C2 SuperWord: Integer.numberOfLeadingZeros, numberOfTrailingZeros, reverse and bitCount have input types wrongly truncated for byte and short
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk25u-dev/fbd9532c
-
Commit(master)
openjdk/jdk/aa194c6a
-
Review(master)
openjdk/jdk25u-dev/233
-
Review(master)
openjdk/jdk/27819
(1 links to)