8369881: C2: Unexpected node in SuperWord truncation: ReverseBytesS, ReverseBytesUS

Backport-of: aa194c6a5a21aca64d454e4c5eeed1464c8f190b